@@ -1,14 +1,13 @@
 package me.bsuir.easyattend.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import me.bsuir.easyattend.dto.create.EventCreateDto;
-import me.bsuir.easyattend.dto.get.EventGetDto;
+import me.bsuir.easyattend.dto.get.*;
 import me.bsuir.easyattend.exception.ResourceNotFoundException;
 import me.bsuir.easyattend.mapper.EventMapper;
-import me.bsuir.easyattend.model.Event;
-import me.bsuir.easyattend.model.User;
-import me.bsuir.easyattend.repository.EventRepository;
-import me.bsuir.easyattend.repository.UserRepository;
+import me.bsuir.easyattend.model.*;
+import me.bsuir.easyattend.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,24 +17,45 @@ public class EventService {
 
     private final EventRepository eventRepository;
     private final EventMapper eventMapper;
+    private final RegistrationStatusRepository registrationStatusRepository; // Add RegistrationStatusRepository
     private final UserRepository userRepository;
 
     @Autowired
     public EventService(
             EventRepository eventRepository,
             EventMapper eventMapper,
-            UserRepository userRepository
+            UserRepository userRepository,
+            RegistrationStatusRepository registrationStatusRepository // Inject RegistrationStatusRepository
     ) {
         this.eventRepository = eventRepository;
         this.eventMapper = eventMapper;
         this.userRepository = userRepository;
+        this.registrationStatusRepository = registrationStatusRepository;
     }
 
     @Transactional(readOnly = true)
     public EventGetDto getEventById(Long id) {
         Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("" + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id " + id));
         return eventMapper.toDto(event);
+    }
+
+    @Transactional(readOnly = true)
+    public List<EventAttendeeDto> getAttendeesByEventId(Long eventId) {
+        List<User> attendees = registrationStatusRepository.findUsersByEvent_Id(eventId);
+        return attendees.stream()
+                .map(this::convertToEventAttendeeDto)
+                .collect(Collectors.toList());
+    }
+
+    // convert user to EventAttendeeDto
+    private EventAttendeeDto convertToEventAttendeeDto(User user) {
+        EventAttendeeDto dto = new EventAttendeeDto();
+        dto.setId(user.getId());
+        dto.setUsername(user.getUsername());
+        dto.setFirstName(user.getFirstName());
+        dto.setLastName(user.getLastName());
+        return dto;
     }
 
     @Transactional(readOnly = true)
@@ -43,7 +63,7 @@ public class EventService {
         List<Event> events = eventRepository.findAll();
         return events.stream()
                 .map(eventMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -64,7 +84,7 @@ public class EventService {
     @Transactional
     public EventGetDto updateEvent(Long id, EventCreateDto eventCreateDto) {
         Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("" + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id " + id));
 
         User organizer = userRepository.findById(eventCreateDto.getOrganizerId())
                 .orElseThrow(()
@@ -81,7 +101,12 @@ public class EventService {
     @Transactional
     public void deleteEvent(Long id) {
         Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("" + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id " + id));
+
+        List<RegistrationStatus> registrationStatuses = registrationStatusRepository.findByEvent_Id(id);
+        registrationStatusRepository.deleteAll(registrationStatuses);
+
+        // Now, delete the event
         eventRepository.delete(event);
     }
 }
